src/objects/Contract.object
<CustomObject>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Contract_Status_New__c</fullName>
        <description>5146</description>
        <label>Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Passed End Date</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <label>Accreditation Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Type_Other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Type Other</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>DMA-Co-Branded</fullName>
                </value>
                <value>
                    <fullName>DMA-Co-Branded (non PPA Distributor)</fullName>
                </value>
                <value>
                    <fullName>DMA-NBOS</fullName>
                </value>
                <value>
                    <fullName>DMA-NBOS (Non PPA Distributor)</fullName>
                </value>
                <value>
                    <fullName>Federal Government Agreement</fullName>
                </value>
                <value>
                    <fullName>Letter of Resale Authorization</fullName>
                </value>
                <value>
                    <fullName>Managed Services Amendment to SSA/MSA</fullName>
                </value>
                <value>
                    <fullName>NDA</fullName>
                </value>
                <value>
                    <fullName>NIRA</fullName>
                </value>
                <value>
                    <fullName>PMA-Co-Branded (Non PPA Services Partner)</fullName>
                </value>
                <value>
                    <fullName>PMA-NBOS</fullName>
                </value>
                <value>
                    <fullName>PMA-NBOS (Non-PPA Services Partner)</fullName>
                </value>
                <value>
                    <fullName>PMA-Co-Branded</fullName>
                </value>
                <value>
                    <fullName>PPA-DIS</fullName>
                </value>
                <value>
                    <fullName>PPA-RES</fullName>
                </value>
                <value>
                    <fullName>CPA-RES</fullName>
                </value>
                <value>
                    <fullName>CPA-DIS</fullName>
                </value>
                <value>
                    <fullName>US Distributor - Legacy</fullName>
                </value>
                <value>
                    <fullName>Reseller - (FNOK)</fullName>
                </value>
                <value>
                    <fullName>Reseller - (FALU)</fullName>
                </value>
                <value>
                    <fullName>Services Partner Agreement</fullName>
                </value>
                <value>
                    <fullName>CPA-DIS family</fullName>
                    <isActive>false</isActive>
                    <label>CPA-DIS family</label>
                </value>
                <value>
                    <fullName>CPA-RES family</fullName>
                    <isActive>false</isActive>
                    <label>CPA-RES family</label>
                </value>
                <value>
                    <fullName>PPA-DIS family</fullName>
                    <isActive>false</isActive>
                    <label>PPA-DIS family</label>
                </value>
                <value>
                    <fullName>PPA-RES family</fullName>
                    <isActive>false</isActive>
                    <label>PPA-RES family</label>
                </value>
                <value>
                    <fullName>Reseller Agreements</fullName>
                    <isActive>false</isActive>
                    <label>Reseller Agreements</label>
                </value>
                <value>
                    <fullName>SPaaP- Managed Services</fullName>
                    <isActive>false</isActive>
                    <label>SPaaP- Managed Services</label>
                </value>
                <value>
                    <fullName>SPaaP-Hybrid</fullName>
                    <isActive>false</isActive>
                    <label>SPaaP-Hybrid</label>
                </value>
                <value>
                    <fullName>SPaaP-Reseller</fullName>
                    <isActive>false</isActive>
                    <label>SPaaP-Reseller</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expired_Contract_Status__c</fullName>
        <description>5146</description>
        <label>Expired Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Action Needed</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Is_Maintenance_Agreement__c</fullName>
        <formula>IF(CONTAINS( TEXT(Contract_Type__c), &apos;Co-Branded&apos;) || CONTAINS( TEXT(Contract_Type__c) , &apos;NBOS&apos;),True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Maintenance Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Is_Product_Agreement__c</fullName>
        <formula>IF(CONTAINS( TEXT(Contract_Type__c), &apos;PPA-DIS&apos;) || 
CONTAINS( TEXT(Contract_Type__c) , &apos;CPA-RES&apos;) ||
CONTAINS( TEXT(Contract_Type__c), &apos;PPA-RES&apos;) || 
CONTAINS( TEXT(Contract_Type__c), &apos;PPA-RES&apos;) ||
CONTAINS( TEXT(Contract_Type__c), &apos;US Distributor - Legacy&apos;) ||
CONTAINS( TEXT(Contract_Type__c), &apos;Reseller - (FNOK)&apos;) ||
CONTAINS( TEXT(Contract_Type__c), &apos;Reseller - (FALU)&apos;) ||
CONTAINS( TEXT(Contract_Type__c), &apos;Services Partner Agreement&apos;) ||
CONTAINS( TEXT(Contract_Type__c), &apos;CPA-DIS&apos;) ||
CONTAINS( TEXT(Contract_Type__c), &apos;NIRA&apos;) ,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Product Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Sub_Contract_Type__c</fullName>
        <label>Sub Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Contract_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Addendum Annex 1 Data Protection (apply only to EU partners (PPA -DIS)</fullName>
                </value>
                <value>
                    <fullName>Addendum Annex 1 Data Protection (apply only to EU partners (PPA -RES)</fullName>
                </value>
                <value>
                    <fullName>Adoption Agreement - Nokia Fronting Unit (PPA-DIS)</fullName>
                </value>
                <value>
                    <fullName>Adoption Agreement - Nokia Fronting Unit (PPA-RES)</fullName>
                </value>
                <value>
                    <fullName>Adoption Agreement - to add Countries (PPA-DIS)</fullName>
                </value>
                <value>
                    <fullName>Adoption Agreement - to add Countries (PPA-RES)</fullName>
                </value>
                <value>
                    <fullName>Amendment Agreement (AmA) Framework Template (PPA-DIS)</fullName>
                </value>
                <value>
                    <fullName>Amendment Agreement (AmA) Framework Template (PPA-RES)</fullName>
                </value>
                <value>
                    <fullName>CUSTOM US GOV Amendment (for non-PPA)</fullName>
                </value>
                <value>
                    <fullName>DMA-CB AE Addendum</fullName>
                </value>
                <value>
                    <fullName>DMA-NBOS AE Addendum</fullName>
                </value>
                <value>
                    <fullName>fNokia Adoption Agreement (PPA-DIS)</fullName>
                </value>
                <value>
                    <fullName>fNokia Adoption Agreement (PPA-RES)</fullName>
                </value>
                <value>
                    <fullName>fNokia NOLS/RAS Adoption Agreement (PPA-DIS)</fullName>
                </value>
                <value>
                    <fullName>fNokia NOLS/RAS Adoption Agreement (PPA-RES)</fullName>
                </value>
                <value>
                    <fullName>Letter of Resale Authorization</fullName>
                </value>
                <value>
                    <fullName>LRA (Fed Gov Project specific agreement)</fullName>
                </value>
                <value>
                    <fullName>Managed Services Amendment to SSA/MSA</fullName>
                </value>
                <value>
                    <fullName>NDA</fullName>
                </value>
                <value>
                    <fullName>Nokia Indirect Reseller Agreement</fullName>
                </value>
                <value>
                    <fullName>Nuage Addendum (PPA -DIS)</fullName>
                </value>
                <value>
                    <fullName>Nuage Addendum (PPA -RES)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partner Program Amendment Agreement Data Protection “AmA” (PPA-RRS)</fullName>
                </value>
                <value>
                    <fullName>Partner Program Amendment Agreement Data Protection “AmA” PPA-DIS)</fullName>
                </value>
                <value>
                    <fullName>PMA-CB AE Addendum</fullName>
                </value>
                <value>
                    <fullName>PMA-NBOS AE Addendum</fullName>
                </value>
                <value>
                    <fullName>PPA-DIS Stocking Amendment</fullName>
                </value>
                <value>
                    <fullName>PPA-DIS US GOV Amendment</fullName>
                </value>
                <value>
                    <fullName>PPA-RES US GOV Amendment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous contract</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contract.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <recordTypes>
        <fullName>Partner_Contract</fullName>
        <active>true</active>
        <label>Partner Contract</label>
    </recordTypes>
    <validationRules>
        <fullName>Contract_Name_Blank_in_lightning</fullName>
        <active>true</active>
        <description>Avoid current lighting issue</description>
        <errorConditionFormula>ISBLANK(Name)</errorConditionFormula>
        <errorMessage>Contract Name is mandatory field and currently, Contract Name field does not save in Lightning mode. Please switch to Salesforce Classic</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Name_and_Status_Not_Editable</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR( ISCHANGED(AccountId), ISCHANGED(Status)),  $Profile.Name = &apos;Non-Sales User Profile&apos;)</errorConditionFormula>
        <errorMessage>Account Name and Status is not editable.</errorMessage>
    </validationRules>
</CustomObject>