src/objects/Contract/fields/Addendum_Type__c.field-meta.xml
<CustomField>
    <fullName>Addendum_Type__c</fullName>
    <label>Addendum Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MSP Gold Addendum</fullName>
            </value>
            <value>
                <fullName>Standard Addendum</fullName>
            </value>
            <value>
                <fullName>AIH Addendum Domestic</fullName>
            </value>
            <value>
                <fullName>AIH Addendum European Edition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>