src/objects/Contract/fields/Additional_Approver_2__c.field-meta.xml
<CustomField>
    <fullName>Additional_Approver_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Approver 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts4</relationshipName>
    <type>Lookup</type>
</CustomField>