src/objects/Contract/fields/Additional_Approver__c.field-meta.xml
<CustomField>
    <fullName>Additional_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts3</relationshipName>
    <type>Lookup</type>
</CustomField>