src/objects/Contract/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <label>Agreement Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>