src/objects/Contract/fields/Aircraft__c.field-meta.xml
<CustomField>
    <fullName>Aircraft__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aircraft</label>
    <referenceTo>Fleet_Asset_Detail__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>