src/objects/Contract/fields/ANNUAL_HOUR_AMT__c.field-meta.xml
<CustomField>
    <fullName>ANNUAL_HOUR_AMT__c</fullName>
    <label>Annual Hour Amount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>