src/objects/Contract/fields/AnticipatedNewContractExecutionDate__c.field-meta.xml
<CustomField>
    <fullName>AnticipatedNewContractExecutionDate__c</fullName>
    <label>Contract Extension Expiration Date</label>
    <type>Date</type>
</CustomField>