src/objects/Contract/fields/AOAddress1__c.field-meta.xml
<CustomField>
    <fullName>AOAddress1__c</fullName>
    <label>AOAddress1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>