src/objects/Contract/fields/Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date__c</fullName>
    <label>Extension 1 Approved Date</label>
    <type>DateTime</type>
</CustomField>