src/objects/Contract/fields/Asset_Program__c.field-meta.xml
<CustomField>
    <fullName>Asset_Program__c</fullName>
    <label>Asset Program</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>