src/objects/Contract/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <description>BM 8/11/12 - Created for MSP HAPP Projects - Classification for Contract. Parent to Sub-Classification constrained picklist
KH 9/12/2013 - added picklist values for NavDB and GDC</description>
    <inlineHelpText>Classification for Contract. Parent to Sub-Classification constrained picklist</inlineHelpText>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>EMS</fullName>
            </value>
            <value>
                <fullName>GSE Tools</fullName>
            </value>
            <value>
                <fullName>New Aircraft enrollment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Transfer inbound</fullName>
            </value>
            <value>
                <fullName>Transfer outbound</fullName>
            </value>
            <value>
                <fullName>Transfer to bank</fullName>
            </value>
            <value>
                <fullName>Waiting sale</fullName>
            </value>
            <value>
                <fullName>Internal Purchase</fullName>
            </value>
            <value>
                <fullName>Misc</fullName>
            </value>
            <value>
                <fullName>Shipping Issue</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>