src/objects/Contract/fields/Contract_Extension_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Extension_Number__c</fullName>
    <label>Contract Extension Number</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>