src/objects/Contract/fields/Contract_Extension_Number_History__c.field-meta.xml
<CustomField>
    <fullName>Contract_Extension_Number_History__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Contract Extension Number History</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>