src/objects/Contract/fields/Contract_Number_I_Many__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number_I_Many__c</fullName>
    <label>Contract Number(Ariba)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>