src/objects/Contract/fields/ContractExt_DurationHistory__c.field-meta.xml
<CustomField>
    <fullName>ContractExt_DurationHistory__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ContractExt DurationHistory</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>