src/objects/Contract/fields/ContractExtAdditional_Approvers__c.field-meta.xml
<CustomField>
    <fullName>ContractExtAdditional_Approvers__c</fullName>
    <label>ContractExt Additional Approvers</label>
    <type>TextArea</type>
</CustomField>