src/objects/Contract/fields/customer_code_s__c.field-meta.xml
<CustomField>
    <fullName>customer_code_s__c</fullName>
    <label>Customer Code(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>