src/objects/Contract/fields/Desired_extension_duration__c.field-meta.xml
<CustomField>
    <fullName>Desired_extension_duration__c</fullName>
    <inlineHelpText>Duration in days</inlineHelpText>
    <label>Desired Extension Duration</label>
    <length>250</length>
    <type>Text</type>
</CustomField>