src/objects/Contract/fields/DPAS_Rating__c.field-meta.xml
<CustomField>
    <fullName>DPAS_Rating__c</fullName>
    <label>DPAS Rating#</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DOA1</fullName>
                <label>DO-A1</label>
            </value>
            <value>
                <fullName>DOA2</fullName>
                <label>DO-A2</label>
            </value>
            <value>
                <fullName>DOA3</fullName>
                <label>DO-A3</label>
            </value>
            <value>
                <fullName>DOA4</fullName>
                <label>DO-A4</label>
            </value>
            <value>
                <fullName>DOA5</fullName>
                <label>DO-A5</label>
            </value>
            <value>
                <fullName>DOA7</fullName>
                <label>DO-A7</label>
            </value>
            <value>
                <fullName>DOC3</fullName>
                <label>DO-C3</label>
            </value>
            <value>
                <fullName>DOC9</fullName>
                <label>DO-C9</label>
            </value>
            <value>
                <fullName>DOD1</fullName>
                <label>DO-D1</label>
            </value>
            <value>
                <fullName>DOG2</fullName>
                <label>DO-G2</label>
            </value>
            <value>
                <fullName>DOH1</fullName>
                <label>DO-H1</label>
            </value>
            <value>
                <fullName>DOH8</fullName>
                <label>DO-H8</label>
            </value>
            <value>
                <fullName>DON5</fullName>
                <label>DO-N5</label>
            </value>
            <value>
                <fullName>DXA1</fullName>
                <label>DX-A1</label>
            </value>
            <value>
                <fullName>DXA2</fullName>
                <label>DX-A2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>