src/objects/Contract/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>BM 8/15/12 - created for MSP/HAPP Project. The date at which the new renewal contract becomes effective. Upon renewal this value is copied into the Start Date field.</description>
    <inlineHelpText>The date at which the new renewal contract becomes effective. Upon renewal this value is copied into the Start Date field.</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>