src/objects/Contract/fields/EMS__c.field-meta.xml
<CustomField>
    <fullName>EMS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BM - 8/11/12 - created for MSP HAPP Projects</description>
    <inlineHelpText>To indicate whether EMS is required</inlineHelpText>
    <label>EMS</label>
    <type>Checkbox</type>
</CustomField>