src/objects/Contract/fields/End_date_Required__c.field-meta.xml
<CustomField>
    <fullName>End_date_Required__c</fullName>
    <label>End Date Required?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>