src/objects/Contract/fields/Extension_2_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Extension_2_Approved_Date__c</fullName>
    <label>Extension 2 Approved Date</label>
    <type>DateTime</type>
</CustomField>