src/objects/Contract/fields/Extension_3_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Extension_3_Approved_Date__c</fullName>
    <label>Extension 3 Approved Date</label>
    <type>DateTime</type>
</CustomField>