src/objects/Contract/fields/Extension_Approver__c.field-meta.xml
<CustomField>
    <fullName>Extension_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Ext. 1: Product SBU or AM Sales Channel VP(s); 
Ext. 2: Product or AM Sales Channel President; 
Ext. 3: Aerospace President/ LC&amp;E VP</inlineHelpText>
    <label>Extension Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts2</relationshipName>
    <type>Lookup</type>
</CustomField>