src/objects/Contract/fields/IsSubmitForApproval__c.field-meta.xml
<CustomField>
    <fullName>IsSubmitForApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSubmitForApproval</label>
    <type>Checkbox</type>
</CustomField>