src/objects/Contract/fields/Leap_Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>Leap_Contract_ID__c</fullName>
    <externalId>true</externalId>
    <label>Leap Contract ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>