src/objects/Contract/fields/Leap_Contract_Link__c.field-meta.xml
<CustomField>
    <fullName>Leap_Contract_Link__c</fullName>
    <formula>IF(Leap_Contract_ID__c != null , &apos;https://honeywell.agiloft.com/gui2/samlssologin.jsp?kb=&apos;+$Label.ProjectNname+&apos;&amp;State=Edit:sales_contract&amp;record=&apos;+Leap_Contract_ID__c+&apos;&amp;record_access=view&amp;exiturl=leaveLoggedIn&amp;cancelurl=leaveLoggedIn&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leap Contract Link</label>
    <type>Text</type>
</CustomField>