src/objects/Contract/fields/Legacy_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Contract_Number__c</fullName>
    <description>BM 7/20/12 - removed Unique and External Id</description>
    <label>Legacy Contract Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>