src/objects/Contract/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>North America (NA)</fullName>
            </value>
            <value>
                <fullName>Outside North America (ONA)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>