src/objects/Contract/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <description>BM 8/11/12 - Created for MSP HAPP Projects - to record Loss Reason</description>
    <inlineHelpText>If renewal is lost, to record Loss Reason</inlineHelpText>
    <label>Loss Reason</label>
    <type>TextArea</type>
</CustomField>