src/objects/Contract/fields/MSP_CONTRACT_BEGIN_DT__c.field-meta.xml
<CustomField>
    <fullName>MSP_CONTRACT_BEGIN_DT__c</fullName>
    <description>added on demand by Dieter for data migration</description>
    <label>MSP Contract Begin Dt</label>
    <type>Date</type>
</CustomField>