src/objects/Contract/fields/MSP_CONTRACT_NUM__c.field-meta.xml
<CustomField>
    <fullName>MSP_CONTRACT_NUM__c</fullName>
    <description>added on demand by Dieter for data migration</description>
    <label>MSP Contract Num</label>
    <length>10</length>
    <type>Text</type>
</CustomField>