src/objects/Contract/fields/MSP_PLATFORM_END_DT__c.field-meta.xml
<CustomField>
    <fullName>MSP_PLATFORM_END_DT__c</fullName>
    <description>added on demand by Dieter for data migration</description>
    <label>MSP Platform End Dt</label>
    <type>Date</type>
</CustomField>