src/objects/Contract/fields/New_Account_Service_Level__c.field-meta.xml
<CustomField>
    <fullName>New_Account_Service_Level__c</fullName>
    <formula>TEXT(New_Account_Name__r.Service_Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Account Service Level</label>
    <type>Text</type>
</CustomField>