src/objects/Contract/fields/NEW_CONTRACT_DOLLAR_AMT__c.field-meta.xml
<CustomField>
    <fullName>NEW_CONTRACT_DOLLAR_AMT__c</fullName>
    <label>New Contract Dollar Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>